# oms

./: .gitignore  Cargo.toml  output.txt  search_output.txt
resources/elastic-search/: DockerFile  docker-compose.yaml  elasticsearch.yml  sysctl.conf
resources/mserv/assets/: index.html
resources/mserv/assets/css/: video-js.css
resources/mserv/assets/js/: elastic.js  main.js
resources/mserv/assets/js/components/: movie.js  movies.js  player.js  search.js  summary.js
resources/services/: mount.service  movies.service
src/: app.rs  helpers.rs  lib.rs  main.rs  vserv.rs
src/app/: actions.rs  commands.rs  config.rs
src/app/actions/: info.rs  read.rs  search.rs
src/app/commands/: help.rs  info.rs  mserv.rs  read.rs  renamemovie.rs  search.rs  transcode.rs
src/app/commands/info/: audio.rs  image.rs  movie.rs  option.rs  pdf.rs  video.rs
src/app/commands/mserv/: option.rs  request.rs
src/app/commands/mserv/request/: path.rs  process.rs  staticfile.rs  summary.rs  utils.rs
src/app/commands/mserv/request/process/: metadata.rs  setting.rs  summary.rs  transcode.rs
src/app/commands/mserv/resources/assets/: index.html
src/app/commands/mserv/resources/assets/js/: main.js
src/app/commands/mserv/resources/assets/js/components/: config.js  media.js  medias.js  metadata.js  movie.js  movies.js  player.js  search.js  summary.js
src/app/commands/mserv/resources/assets/js/services/: app.js  elastic.js  history.js
src/app/commands/search/: audio.rs  image.rs  movie.rs  ms.rs  option.rs  pdf.rs  text.rs  video.rs
src/app/commands/transcode/: option.rs
src/helpers/: audio.rs  cache.rs  command.rs  db.rs  elastic.rs  file.rs  http.rs  image.rs  input.rs  media.rs  movie.rs  output.rs  pdf.rs  string.rs  threadpool.rs  video.rs
src/helpers/db/: elastic.rs  kvstore.rs
src/helpers/media/: audio.rs  image.rs  pdf.rs  video.rs
src/helpers/media/pdf/: content.rs  metadata.rs  provider.rs  result.rs
src/helpers/media/pdf/provider/: exif.rs  local.rs  pdfprov.rs
src/helpers/media/video/: metadata.rs  provider.rs  result.rs  title.rs
src/helpers/media/video/provider/: local.rs  omdb.rs  tmdb.rs
src/helpers/movie/: local.rs  omdb.rs  tmdb.rs
src/helpers/movie/tmdb/: cast.rs  genre.rs
src/helpers/video/: local.rs  metadata.rs  omdb.rs  result.rs  title.rs  tmdb.rs
src/helpers/video/omdb/: movie.rs
src/helpers/video/tmdb/: cast.rs  movie.rs
(+8 files in other folders)
