[package]
name = "oms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
colored = "2.0.4"
data-encoding = "2.5.0"
diacritics = "0.2.0"
dotext = "0.1.1"
image = "0.24.7"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
mime_guess = "2.0.4"
pdf = "0.9.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.17.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
termimage = "1.2.1"
typedb = "0.9.0"
url = "2.5.0"
urlencoding = "2.1.3"
vlc-rs = "0.3.0"

[[bin]]
name = "oms"
path = "src/main.rs"

[[bin]]
name = "vserv"
path = "src/vserv.rs"

[profile.dev]
opt-level = 0
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = true
